--- a/style.css
+++ b/style.css
@@ -6,16 +6,15 @@ body {
 
 .first-line {
     position: absolute;
-    width: 522px;
-    height: 42px;
-    left: 699px;
+    height: 50px;
+    margin-left: 30.78125%;
     top: 29px;
 
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 39px;
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 58px;
     text-align: center;
 
     color: #8E88C1;
@@ -24,24 +23,25 @@ body {
 
 .logo-entree {
     position: absolute;
-    width: 444px;
-    height: 342px;
-    left: 738px;
+    width: 100%;
+    max-width: 444px;
+    height: auto;
+    left: 38.4375%;
     top: 98px;
 
-    background: url(ressources\logo_Formhack_tion_black-removebg-preview.png);
+    background: url(ressources\logo_Formhacktion_black-removebg-preview.png);
 }
 
 .catchphrase {
     position: absolute;
-    width: 669px;
+    width: 34.895833333%;
     height: 121px;
-    left: 626px;
+    left: 32.552083333%;
     top: 467px;
 
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 48px;
     line-height: 58px;
     text-align: center;
@@ -52,9 +52,9 @@ body {
 
 .button-1 {
     position: absolute;
-    width: 518px;
+    width: 26.979166666%;
     height: 68px;
-    left: 701px;
+    left: 36.510416666%;
     top: 641px;
     background: #3F50E7;
     border-radius: 8px;
@@ -77,6 +77,7 @@ body {
     color: #FFFFFF;
 }
 
+
 .overlap-group {
     position: absolute;
     width: 1920px;
@@ -85,6 +86,29 @@ body {
     top: 800px;
 
     background: #071341;
+}
+
+
+.line {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: normal;
+}
+
+
+.item {
+    display: block;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
+    align-self: center;
+    order: 0;
+    width: 65px;
+    margin: 65px;
+    background-color: red;
 }
 
 .formation-container {
