--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,9 @@
     font-weight: 400;
     font-size: 40px;
     line-height: 48px;
-    text-align: center;
+    text-align: left;
 
-    color: #8E88C1;
+    color: white;
 }
 
 .formulaire {
@@ -139,4 +139,18 @@
     font-size: xx-large;
 
     color: #FFFFFF;
+}
+
+.back-arrow {
+    text-decoration: none;
+    font-size: 32px;
+    color: white;
+    margin-top: 1em;
+    margin-left: 4em;
+}
+
+.back-arrow:hover {
+    text-decoration: none;
+    font-size: 32px;
+    color: white;
 }
